# aduanas-conecta-logis-back

./: README.md  pyproject.toml  rejected_records.txt
aduanas_conecta_logis_back/api/: main.py
aduanas_conecta_logis_back/etl/: analyze.py  config.py  extract.py  load.py  main.py  modeling.py  transform.py
data/: bultosAbril2025.txt  bultosMarzo2025.txt  datawarehouse.db  metadata.xlsx
